// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders the wrapped component before the request is done 1`] = `
<GithubData
  setGithubData={[MockFunction]}
>
  <WrappedComponent
    data={
      Object {
        "error": null,
        "isLoading": true,
        "response": null,
      }
    }
    setGithubData={[MockFunction]}
  >
    <div>
      <span>
        Error: 
        none
      </span>
      <span>
        Response: 
        none
      </span>
      <span>
        Loading: 
        true
      </span>
    </div>
  </WrappedComponent>
</GithubData>
`;

exports[`it renders the wrapped component with a response 1`] = `
<GithubData
  githubData=":responseBody"
  setGithubData={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            ":name": ":responseBody",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <WrappedComponent
    data={
      Object {
        "error": null,
        "isLoading": false,
        "response": ":responseBody",
      }
    }
    githubData=":responseBody"
    setGithubData={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              ":name": ":responseBody",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <div>
      <span>
        Error: 
        none
      </span>
      <span>
        Response: 
        :responseBody
      </span>
      <span>
        Loading: 
        false
      </span>
    </div>
  </WrappedComponent>
</GithubData>
`;

exports[`it renders the wrapped component with an error 1`] = `
<GithubData
  setGithubData={[MockFunction]}
>
  <WrappedComponent
    data={
      Object {
        "error": ":error",
        "isLoading": false,
        "response": null,
      }
    }
    setGithubData={[MockFunction]}
  >
    <div>
      <span>
        Error: 
        :error
      </span>
      <span>
        Response: 
        none
      </span>
      <span>
        Loading: 
        false
      </span>
    </div>
  </WrappedComponent>
</GithubData>
`;
